layout content added

--- a/contacts/src/app/modules/home/layouts/header/header.component.html
+++ b/contacts/src/app/modules/home/layouts/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary"> -->
+  <div class="container-fluid">
+    <a class="btn btn-primary navbar-brand menu" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+      Menu
+    </a>
+    <a class="navbar-brand" href="#">Contacts</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <!-- <a class="nav-link" href="javascript:;">Contacts</a> -->
+      </div>
+    </div>
+  </div>
+</nav>
