list and create contact template

--- a/contacts/src/app/modules/home/contacts/contacts.component.html
+++ b/contacts/src/app/modules/home/contacts/contacts.component.html
@@ -1,1 +1,42 @@
-<p>contacts works!</p>
+
+<div>
+  <!-- <button class="btn btn-primary" (click)="newContact()">Create New Contact</button> -->
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Mobile</th>
+      <th scope="col">Email</th>
+      <th scope="col">Address</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>9874563210</td>
+      <td>mark@outlook.com</td>
+      <td>New York</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>8529637410</td>
+      <td>jacob@outlook.com</td>
+      <td>LA</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>Bird</td>
+      <td>7418529630</td>
+      <td>larry@gmail.com</td>
+      <td>CA</td>
+    </tr>
+  </tbody>
+</table>
