--- a/contacts/src/app/modules/home/layouts/header/header.component.html
+++ b/contacts/src/app/modules/home/layouts/header/header.component.html
@@ -4,7 +4,7 @@
     <a class="btn btn-primary navbar-brand menu" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
       Menu
     </a>
-    <a class="navbar-brand" href="#">Contacts</a>
+    <a class="navbar-brand" href="#">Phonebook</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
