--- a/contacts/src/app/modules/home/layouts/sidebar/sidebar.component.html
+++ b/contacts/src/app/modules/home/layouts/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div id=sidebar>
   <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title sidebar-header" id="offcanvasExampleLabel">Sample App</h5>
+      <h5 class="offcanvas-title sidebar-header" id="offcanvasExampleLabel">Phonebook App</h5>
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
@@ -9,6 +9,9 @@
         <ul class="nav flex-column">
           <li class="nav-item" [routerLinkActive]="['active']">
             <a class="nav-link active" aria-current="page" [routerLink]="['contacts']">Contacts</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['active']">
+            <a class="nav-link active" aria-current="page" [routerLink]="['contacts/create']">New Contact</a>
           </li>
         </ul>
       </div>
